<resources>
    <string name="app_name">Voter Register</string>

    <string name="add_voter">Add Voter Here!</string>
    <string name="edit_voter">Edit Voter Here!</string>
    <string name="voter_name">Enter Voter Name</string>
    <string name="voter_id">Enter Voter Id</string>
    <string name="voter_station">Enter Voter Station</string>
    <string name="floating_save">Save Voter Button</string>
    <string name="voter_details_display">Voter Details</string>
    <string name="name_disp">Name</string>
    <string name="station_disp">Station</string>
    <string name="id_num_disp">Id Number</string>
    <string name="voter_title">All Voters</string>
    <string name="delete_all">Delete All</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="notifications_header">Notifications</string>
    <string name="account_header">Account</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!--Settings Preference -->
    <string name="user_name">Name</string>
    <string name="country">Country</string>
    <string name="station">Voter Station</string>
    <string name="email_title">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="user_photo">Photo</string>
    <string name="country_summary">Choose your country here!</string>
    <string name="default_user_name">User</string>
    <string name="default_email_address">user@gmail.com</string>
    <string name="default_phone_number">+25479**077*8</string>
    <string name="default_station">Stationale</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="enter_station">Enter Your Voting</string>
    <string name="enter_phone_number">Enter Your Phone Number</string>
    <string name="enter_email">Enter Your Email Address</string>

    <string-array name="country_names">
        <item>Kenya</item>
        <item>Egypt</item>
        <item>United States of America</item>
        <item>Japan</item>
        <item>India</item>
        <item>United Kingdom</item>
        <item>Canada</item>
        <item>Others</item>
    </string-array>

    <string-array name="country_values">
        <item>KE</item>
        <item>EGY</item>
        <item>USA</item>
        <item>JA</item>
        <item>IND</item>
        <item>UK</item>
        <item>CAN</item>
        <item>-1</item>
    </string-array>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>