<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewVoter">

    <TextView
        android:id="@+id/screen_lable"
        style="@style/TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/add_voter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_voter_name"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/voter_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/screen_lable"
        app:layout_constraintStart_toStartOf="@+id/screen_lable"
        app:layout_constraintTop_toBottomOf="@+id/screen_lable" />

    <EditText
        android:id="@+id/text_voter_station"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/voter_station"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/text_voter_name"
        app:layout_constraintStart_toStartOf="@+id/text_voter_name"
        app:layout_constraintTop_toBottomOf="@+id/text_voter_name" />

    <EditText
        android:id="@+id/text_voter_id"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/voter_id"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/text_voter_station"
        app:layout_constraintStart_toStartOf="@+id/text_voter_station"
        app:layout_constraintTop_toBottomOf="@+id/text_voter_station"
        android:importantForAutofill="no" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:contentDescription="@string/floating_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_voter_id"
        android:src="@drawable/ic_save"
        android:focusable="true" />


</androidx.constraintlayout.widget.ConstraintLayout>